--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">Hello, my name<br />
-									is Ethereal</h1>
-									<p>This is <strong>Ethereal</strong>, a free site template by AJ for <a href="https://html5up.net">HTML5 UP</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)</p>
+									<h1 class="major">Mason Science Olympiad // 2017-2018</h1>
+									<p>This is a compliation of all the branding made for Mason High School's, 2018 State Champion, Science Olympiad team. <a href="https://masonscioly.org</a> All designed by <strong>'18 Senior Captain, Alyson Lam</strong></p>
 									<ul class="actions">
 										<li><a href="#first" class="button special color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
