ok fixed the bio
accidentally forgot brackets on the website so the last part didn't show up

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
 									<h1 class="major">Mason Science Olympiad // 2017-2018</h1>
-									<p>This is a compliation of all the branding made for Mason High School's, 2018 State Champion, Science Olympiad team. <a href="https://masonscioly.org</a> All designed by <strong>'18 Senior Captain, Alyson Lam</strong></p>
+									<p>This is a compliation of all the spiritwear and branding made for Mason High School's, 2018 State Champion, Science Olympiad team. <a href="https://masonscioly.org">Our website</a> All designed by <strong>'18 Senior Captain, Alyson Lam</strong></p>
 									<ul class="actions">
 										<li><a href="#first" class="button special color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
