--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
-									<h2 class="major">My Mission</h2>
+									<h2 class="major">Our Mission</h2>
 									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
@@ -78,7 +78,7 @@
 						<!-- Panel -->
 							<section class="panel">
 								<div class="intro color2">
-									<h2 class="major">Elit integer</h2>
+									<h2 class="major">My Role</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
 								<div class="gallery">
