--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ethereal by HTML5 UP</title>
+		<title>Beyond Our Limits</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,7 +23,8 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">Mason Science Olympiad // 2017-2018</h1>
+									<h1 class="major">R I S E   A B O V E</h1>
+									<p>// 2017-2018</p>
 									<p>This is a compliation of all the spiritwear and branding made for Mason High School's, 2018 State Champion, Science Olympiad team. <a href="https://www.masonscioly.org">Our website</a></p> 
 									<p>All designed by <strong>'18 Senior Captain, Alyson Lam</strong></p>
 									<ul class="actions">
