--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Beyond Our Limits</title>
+		<title>Reach</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,7 +23,7 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">R I S E   A B O V E</h1>
+									<h1 class="major">Beyond Us</h1>
 									<p>// 2017-2018</p>
 									<p>This is a compliation of all the spiritwear and branding made for Mason High School's, 2018 State Champion, Science Olympiad team. <a href="https://www.masonscioly.org">Our website</a></p> 
 									<p>All designed by <strong>'18 Senior Captain, Alyson Lam</strong></p>
@@ -53,15 +53,8 @@
 									<h2 class="major">Our Team</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
-								<div class="inner">
-									<ul class="grid-icons three connected">
-										<li><span class="icon fa-diamond"><span class="label">Lorem</span></span></li>
-										<li><span class="icon fa-camera-retro"><span class="label">Ipsum</span></span></li>
-										<li><span class="icon fa-cog"><span class="label">Dolor</span></span></li>
-										<li><span class="icon fa-paper-plane"><span class="label">Sit</span></span></li>
-										<li><span class="icon fa-bar-chart"><span class="label">Amet</span></span></li>
-										<li><span class="icon fa-code"><span class="label">Nullam</span></span></li>
-									</ul>
+								<data-position="top left">
+									<img src="images/ohio_state_champs.jpg" alt="" />
 								</div>
 							</section>
 
