--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
 									<h2 class="major">Our Team</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
+								<div class="inner">
 								<data-position="top left">
-									<img src="images/ohio_state_champs.jpg" alt="" />
+									<img src="images/ohio_state_champs.jpg" alt="MSO" />
 								</div>
 							</section>
 
