--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
 
 						<!-- Panel -->
 							<section class="panel color1">
-								<div class="intro joined">
+								<div class="content span-7">
 									<h2 class="major">Our Team</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
-								<div class="inner">
-								<data-position="top left">
+								<div class="image filtered tinted" data-position="top left">
 									<img src="images/ohio state champs.jpg" alt="MSO" />
 								</div>
 							</section>
@@ -76,9 +75,8 @@
 									<h2 class="major">My Role</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
-								<div class="inner">
-								<data-position="top left">
-									<img src="images/IMG_4386 (2).JPG alt="MSO" />
+								<div class="image filtered tinted" data-position="top left">
+									<img src="images/IMG_4386 (2).JPG" alt="MSO" />
 								</div>
 							</section>
 
