--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 
 						<!-- Panel -->
 							<section class="panel color1">
-								<div class="content span-7">
+								<div class="intro joined">
 									<h2 class="major">Our Team</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
-								<div class="image filtered tinted" data-position="top left">
+								<div class="image filtered tinted" data-position="center">
 									<img src="images/ohio state champs.jpg" alt="MSO" />
 								</div>
 							</section>
