--- a/index.html
+++ b/index.html
@@ -46,9 +46,18 @@
 									<img src="images/intro background.png" alt="" />
 								</div>
 							</section>
-
+						<!-- Panel (Spotlight) -->
+							<section class="panel spotlight medium right" id="first">
+								<div class="content span-7">
+									<h2 class="major">Our Team</h2>
+									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+								</div>
+								<div class="image filtered tinted" data-position="top left">
+									<img src="images/ohio state champs.jpg" alt="" />
+								</div>
+							</section>
 						<!-- Panel -->
-							<section class="panel color1">
+							<!--<section class="panel color1">
 								<div class="intro joined">
 									<h2 class="major">Our Team</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
@@ -57,6 +66,7 @@
 									<img src="images/ohio state champs.jpg" alt="MSO" />
 								</div>
 							</section>
+						-->
 
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight large left">
