--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
-									<img src="images/intro background.png" alt="" />
+									<img src="images/intro bg.png" alt="" />
 								</div>
 							</section>
 						
 						<!-- Our Team Panel -->
 							<section class="panel">
-								<div class="intro color2">IMG_4386 (2).JPG
+								<div class="intro color2">
 									<h2 class="major">Our Team</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
@@ -58,7 +58,7 @@
 						<!-- Our Team Pic Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="image filtered tinted" data-position="top left">
-									<img src="images/ohio state champs.jpg" alt="" />
+									<img src="images/ohio state champs.jpg" alt="2018 State Tournament" />
 								</div>
 							</section>
 						<!-- Panel -->
@@ -74,7 +74,7 @@
 						-->
 
 						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight large left">
+							<section class="panel spotlight medium left">
 								<div class="content span-5">
 									<h2 class="major">Our Mission</h2>
 									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
@@ -98,9 +98,49 @@
 						<!-- Panel -->
 							<section class="panel color4-alt">
 								<div class="intro color4">
-									<h2 class="major">Contact</h2>
+									<h2 class="major">The Work</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
+									<div class="span-3">
+										<h3 class="major">Table</h3>
+										<div class="table-wrapper">
+											<table>
+												<thead>
+													<tr>
+														<th>Title</th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr>
+														<td>Item One</td>
+														<td>Ante turpis integer aliquet porttitor.</td>
+														<td>29.99</td>
+													</tr>
+													<tr>
+														<td>Item Two</td>
+														<td>Vis ac commodo adipiscing arcu aliquet.</td>
+														<td>19.99</td>
+													</tr>
+													<tr>
+														<td>Item Three</td>
+														<td> Morbi faucibus arcu accumsan lorem.</td>
+														<td>29.99</td>
+													</tr>
+													<tr>
+														<td>Item Four</td>
+														<td>Vitae integer tempus condimentum.</td>
+														<td>19.99</td>
+													</tr>
+												</tbody>
+												<tfoot>
+													<tr>
+														<td colspan="2"></td>
+														<td>100.00</td>
+													</tr>
+												</tfoot>
+											</table>
+										</div>
+									</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
 										<form method="post" action="#">
