--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						
 						<!-- Our Team Panel -->
 							<section class="panel">
-								<div class="intro color2">
+								<div class="content span-5">
 									<h2 class="major">Our Team</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
@@ -75,7 +75,7 @@
 
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium left">
-								<div class="content span-5">
+								<div class="intro color2">
 									<h2 class="major">Our Mission</h2>
 									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
 								</div>
@@ -84,14 +84,14 @@
 								</div>
 							</section>
 
-						<!-- Panel -->
-							<section class="panel">
-								<div class="intro color2">IMG_4386 (2).JPG
+						<!-- My Role Panel -->
+							<section class="panel spotlight small left">
+								<div class="content span-7">
 									<h2 class="major">My Role</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
-									<img src="images/IMG_4386 (2).JPG" alt="MSO" />
+									<img src="images/IMG_4386 (2).JPG" alt="Alyson Lam" />
 								</div>
 							</section>
 
