--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 							</section>
 						
 						<!-- Our Team Panel -->
-							<section class="panel">
-								<div class="content span-5">
+							<section class="panel spotlight small left">
+								<div class="content span-4">
 									<h2 class="major">Our Team</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
@@ -86,11 +86,11 @@
 
 						<!-- My Role Panel -->
 							<section class="panel spotlight small left">
-								<div class="content span-7">
+								<div class="image" data-position="top left">
 									<h2 class="major">My Role</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
-								<div class="image filtered tinted" data-position="top left">
+								<div class="image" data-position="top left">
 									<img src="images/IMG_4386 (2).JPG" alt="Alyson Lam" />
 								</div>
 							</section>
