--- a/index.html
+++ b/index.html
@@ -61,21 +61,10 @@
 									<img src="images/ohio state champs.jpg" alt="2018 State Tournament" />
 								</div>
 							</section>
-						<!-- Panel -->
-							<!--<section class="panel color1">
-								<div class="intro joined">
-									<h2 class="major">Our Team</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
-								</div>
-								<div class="image filtered tinted" data-position="center">
-									<img src="images/ohio state champs.jpg" alt="MSO" />
-								</div>
-							</section>
-						-->
 
-						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight medium left">
-								<div class="intro color2">
+						<!-- Our Mission Panel (Spotlight) -->
+							<section class="panel spotlight medium left" id="first">
+								<div class="content span-5">
 									<h2 class="major">Our Mission</h2>
 									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
 								</div>
@@ -91,7 +80,7 @@
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
 								<div class="image" data-position="top left">
-									<img src="images/IMG_4386 (2).JPG" alt="Alyson Lam" />
+									<img src="images/my role.png" alt="Alyson Lam" />
 								</div>
 							</section>
 
