--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 							<section class="panel spotlight medium left" id="first">
 								<div class="content span-7">
 									<h2 class="major">Introduction</h2>
-									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+									<p>Science Olympiad is one of the largest academic clubs at Mason High School, located in Southwest Ohio. Our team has been established since 2003 and over the years have constantly reached new heights and seen consistent improvement. </p>
+									<p>This past season, we have reached success after success, placing 1st at 3 of the 5 invitationals we have attended this year, a record for us. In addition to that, this was the first year we have attented the MIT Invitational where we placed 2nd against some of the best teams in the nation. Most recently, we have been crowned State Champions at the Ohio Science Olympiad Tournament held April 28th, 2018, breaking a 20 year record. </p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/intro bg.png" alt="" />
@@ -51,7 +52,7 @@
 							<section class="panel">
 								<div class="intro color1">
 									<h2 class="major">Our Team</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>We are a collection of students at MHS with a passion for science beyond our academic responsibilities. Together, we continuously seek to break barriers and expectations in both science and competition.</p>
 								</div>
 							</section>
 						
@@ -66,7 +67,7 @@
 							<section class="panel spotlight medium left" id="first">
 								<div class="content span-5">
 									<h2 class="major">Our Mission</h2>
-									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
+									<p>Having won at the State level, we have qualified for the National Tournament to be held at Colorado State University May 19th, 2018. This has been our goal that we've worked towards for the past 4 years and one we've dedicated thousands of hours to. Having finally realized it, we seek to continue to excel at the National stage.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic03.jpg" alt="" />
@@ -77,7 +78,8 @@
 							<section class="panel spotlight small left">
 								<div class="content span-7" data-position="top left">
 									<h2 class="major">My Role</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>As a member since my freshman year and a captain in my junior and senior year, I have seen the success of this team over the last couple of years, playing a part as both a competitor and leader.</p>
+									<p>I have also overseen the design of both spiritwear and all other graphic materials ranging from posters, to large scale banners, and websites.</p>
 								</div>
 								<div class="image" data-position="top left">
 									<img src="images/my role.png" alt="Alyson Lam" />
@@ -88,7 +90,7 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">The Work</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>This following is a gallery of all the work I've done this season to cultivate a cohesive and fun brand identity.</p>
 								</div>
 									<div class="span-3">
 										<h3 class="major">Table</h3>
