--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<section class="panel spotlight medium left" id="first">
 								<div class="content span-7">
 									<h2 class="major">Introduction</h2>
-									<p>Science Olympiad is one of the largest academic clubs at Mason High School, located in Southwest Ohio. Our team has been established since 2003 and over the years have constantly reached new heights and seen consistent improvement. </p>
+									<p>Science Olympiad is one of the largest academic clubs at Mason High School, located in Southwest Ohio. Together, we compete in 23 different events covering a wide variety of scientific topics. Our team has been established since 2003 and over the years have constantly reached new heights, recently qualifying for the National Tourament to be held at Colorado State University in Fort Collins.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/intro bg.png" alt="" />
@@ -51,7 +51,7 @@
 							<section class="panel">
 								<div class="intro color1">
 									<h2 class="major">Our Team</h2>
-									<p>We are a collection of students at MHS with a passion for science beyond our academic responsibilities. Together, we continuously seek to break barriers and expectations in both science and competition.</p>
+									<p>We are a collection of students at MHS with a passion for science beyond the classroom continuously seeking to break barriers and expectations in both science and competition. In just our short years of high school, the time we've spent together has united us as one family.</p>
 								</div>
 							</section>
 						
@@ -77,8 +77,8 @@
 							<section class="panel spotlight small left">
 								<div class="content span-7" data-position="top left">
 									<h2 class="major">My Role</h2>
-									<p>As a member since my freshman year and a captain in my junior and senior year, I have seen the success of this team over the last couple of years, playing a part as both a competitor and leader.</p>
-									<p>I have also overseen the design of both spiritwear and all other graphic materials ranging from posters, to large scale banners, and websites.</p>
+									<p>As a member since my freshman year and a captain in my junior and senior year, I have seen the success of this team over the last couple of years and have played a part as both a competitor and leader.</p>
+									<p>In addition to the responsiblities I hold as captain, I have also overseen the design of both spiritwear and all other graphic materials ranging from posters, to large scale banners, and websites. The most significant of my work being our spiritwear.</p>
 								</div>
 								<div class="image" data-position="top left">
 									<img src="images/my role.png" alt="Alyson Lam" />
@@ -89,7 +89,7 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">The Work</h2>
-									<p>This following is a gallery of all the work I've done this season to cultivate a cohesive and fun brand identity.</p>
+									<p>This following is a gallery of all the work I've done this season to cultivate a cohesive and fun team identity, some of which will last beyond this year after I graduate.</p>
 								</div>
 									<div class="span-3">
 										<h3 class="major">Table</h3>
