--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<section class="panel spotlight medium left" id="first">
 								<div class="content span-7">
 									<h2 class="major">Introduction</h2>
-									<p>Science Olympiad is one of the largest academic clubs at Mason High School, located in Southwest Ohio. Together, we compete in 23 different events covering a wide variety of scientific topics. Our team has been established since 2003 and over the years have constantly reached new heights, recently qualifying for the National Tourament to be held at Colorado State University in Fort Collins.</p>
+									<p>Science Olympiad is one of the largest academic clubs at Mason High School, located in Southwest Ohio. Together, we compete in 23 different events covering a wide variety of scientific topics. Our team has been established since 2003 and over the years have constantly reached new heights, recently qualifying for the National Tourament to be held at Colorado State University in Fort Collins for the first time in our history. As champions, we also break a 20 year Ohio Science Olympiad record.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/intro bg.png" alt="" />
@@ -51,7 +51,7 @@
 							<section class="panel">
 								<div class="intro color1">
 									<h2 class="major">Our Team</h2>
-									<p>We are a collection of students at MHS with a passion for science beyond the classroom continuously seeking to break barriers and expectations in both science and competition. In just our short years of high school, the time we've spent together has united us as one family.</p>
+									<p>We are a collection of students at MHS with a passion for science beyond the classroom. For hours on end, we seek to break barriers and expectations by working hard and pursuing our interests. In just our short years of high school, the time we've spent together has united us as one family.</p>
 								</div>
 							</section>
 						
@@ -66,7 +66,7 @@
 							<section class="panel spotlight medium left" id="first">
 								<div class="content span-5">
 									<h2 class="major">Our Mission</h2>
-									<p>Having won at the State level, we have qualified for the National Tournament to be held at Colorado State University May 19th, 2018. This has been our goal that we've worked towards for the past 4 years and one we've dedicated thousands of hours to. Having finally realized it, we seek to continue to excel at the National stage.</p>
+									<p>For the past 4 years, our goal has remained the same: get to Nationals. Now that we've finally reached that Nationals stage, our mission is to now stand together and excel.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic03.jpg" alt="" />
