--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 							<section class="panel">
 								<div class="intro color1">
 									<h2 class="major">Our Team</h2>
-									<p>We are a collection of students at MHS with a passion for science beyond the classroom. For hours on end, we seek to break barriers and expectations by working hard and pursuing our interests. In just our short years of high school, the time we've spent together has united us as one family.</p>
+									<p>We are a collection of students at MHS with a passion for science beyond the classroom. For hours on end, we seek to break barriers and expectations by working hard and pursuing our interests. In the few short years of high school, the time we've spent together has united us as one family.</p>
+									<p><strong>2018 States</strong></p>
 								</div>
 							</section>
 						
@@ -66,7 +67,7 @@
 							<section class="panel spotlight medium left" id="first">
 								<div class="content span-5">
 									<h2 class="major">Our Mission</h2>
-									<p>For the past 4 years, our goal has remained the same: get to Nationals. Now that we've finally reached that Nationals stage, our mission is to now stand together and excel.</p>
+									<p>For the past 4 years, our goal has remained the same: get to Nationals. Now that we've finally fulfilled that, our mission is to now stand together on that National stage, and excel.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic03.jpg" alt="" />
@@ -89,10 +90,13 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">The Work</h2>
-									<p>This following is a gallery of all the work I've done this season to cultivate a cohesive and fun team identity, some of which will last beyond this year after I graduate.</p>
+									<p>This following is a gallery of all the work I've done this season to cultivate a fun, yet cohesive, team identity to present to others and to encourage team spirit, some of which will last beyond this year after I graduate.</p>
 								</div>
-									<div class="span-3">
-										<h3 class="major">Table</h3>
+							</section>
+						<!-- Panel -->
+							<section class="panel color4-alt">
+								<div class="intro color4">
+									<h3 class="major">Table</h3>
 										<div class="table-wrapper">
 											<table>
 												<thead>
@@ -131,36 +135,6 @@
 											</table>
 										</div>
 									</div>
-								<div class="inner columns divided">
-									<div class="span-3-25">
-										<form method="post" action="#">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="email" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="4"></textarea>
-											</div>
-											<ul class="actions">
-												<li><input type="submit" value="Send Message" class="button special" /></li>
-											</ul>
-										</form>
-									</div>
-									<div class="span-1-5">
-										<ul class="contact-icons color1">
-											<li class="icon fa-twitter"><a href="#">@untitled-tld</a></li>
-											<li class="icon fa-facebook"><a href="#">facebook.com/untitled</a></li>
-											<li class="icon fa-snapchat-ghost"><a href="#">@untitled-tld</a></li>
-											<li class="icon fa-instagram"><a href="#">@untitled-tld</a></li>
-											<li class="icon fa-medium"><a href="#">medium.com/untitled</a></li>
-										</ul>
-									</div>
-								</div>
 							</section>
 
 						<!-- Panel -->
