--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
 								</div>
 							</section>
 
-						<!-- Panel -->
+						<!-- Work Intro Panel -->
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">The Work</h2>
 									<p>This following is a gallery of all the work I've done this season to cultivate a fun, yet cohesive, team identity to present to others and to encourage team spirit, some of which will last beyond this year after I graduate.</p>
 								</div>
 							</section>
-						<!-- Panel -->
-							<section class="panel color4-alt">
+						<!-- Work Table Panel -->
+							<section class="panel color4-alt medium left">
 								<div class="intro color4">
 									<h3 class="major">Table</h3>
 										<div class="table-wrapper">
