--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 						<!-- Work Table Panel -->
 							<section class="panel color4-alt medium left">
 								<div class="intro color4">
-									<h3 class="major">Table</h3>
-										<div class="table-wrapper">
+									<h3 class="major medium">Table</h3>
+										<div class="table-wrapper medium">
 											<table>
 												<thead>
 													<tr>
