--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 									<h2 class="major">Our Mission</h2>
 									<p>For the past 4 years, our goal has remained the same: get to Nationals. Now that we've finally fulfilled that, our mission is to now stand together on that National stage, and excel.</p>
 								</div>
-								<div class="image filtered tinted" data-position="top right">
-									<img src="images/pic03.jpg" alt="" />
+								<div class="image filtered tinted" data-position="top left">
+									<img src="images/intro bg.png" alt="" />
 								</div>
 							</section>
 
