--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 										<li><a href="#first" class="button special color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
 								</div>
-								<div class="image filtered span-1-75" data-position="25% 25%">
+								<div class="image span-1-75" data-position="25% 25%">
 									<img src="images/alex-holyoake-113856.jpg" alt="" />
 								</div>
 							</section>
@@ -42,7 +42,7 @@
 									<h2 class="major">Introduction</h2>
 									<p>Science Olympiad is one of the largest academic clubs at Mason High School, located in Southwest Ohio. Together, we compete in 23 different events covering a wide variety of scientific topics. Our team has been established since 2003 and over the years have constantly reached new heights, recently qualifying for the National Tourament to be held at Colorado State University in Fort Collins for the first time in our history. As champions, we also break a 20 year Ohio Science Olympiad record.</p>
 								</div>
-								<div class="image filtered tinted" data-position="top left">
+								<div class="image filtered" data-position="top left">
 									<img src="images/intro bg.png" alt="" />
 								</div>
 							</section>
@@ -69,7 +69,7 @@
 									<h2 class="major">Our Mission</h2>
 									<p>For the past 4 years, our goal has remained the same: get to Nationals. Now that we've finally fulfilled that, our mission is to now stand together on that National stage, and excel.</p>
 								</div>
-								<div class="image filtered tinted" data-position="top left">
+								<div class="image filtered" data-position="top left">
 									<img src="images/intro bg.png" alt="" />
 								</div>
 							</section>
