--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 										<li><a href="#first" class="button special color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
 								</div>
-								<div class="image span-1-75" data-position="25% 25%">
+								<div class="image tinted span-1-75" data-position="25% 25%">
 									<img src="images/alex-holyoake-113856.jpg" alt="" />
 								</div>
 							</section>
