--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 -->
 <html>
 	<head>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8">
+    		 <link rel="shortcut icon" href="images/favicon.ico"
+      		   type="image/x-icon">
 		<title>Reach</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -25,13 +28,13 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Beyond Us</h1>
 									<p>// 2017-2018</p>
-									<p>This is a compliation of all the spiritwear and branding made for Mason High School's, 2018 State Champion, Science Olympiad team. <a href="https://www.masonscioly.org">Our website</a></p> 
+									<p>This is a compliation of all the spiritwear and branding made for Mason High School's Science Olympiad team. <a href="https://www.masonscioly.org">Our website</a></p> 
 									<p>All designed by <strong>'18 Senior Captain, Alyson Lam</strong></p>
 									<ul class="actions">
 										<li><a href="#first" class="button special color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
 								</div>
-								<div class="image tinted span-1-75" data-position="25% 25%">
+								<div class="image tinted filtered span-1-75" data-position="25% 25%">
 									<img src="images/alex-holyoake-113856.jpg" alt="" />
 								</div>
 							</section>
