--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 									</div>
 							</section>
 
-						<!-- Panel -->
+						<!-- Panel
 							<section class="panel color2-alt">
 								<div class="intro color2">
 									<h2 class="major">Elements</h2>
@@ -405,10 +405,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										</form>
 									</div>
 								</div>
-							</section>
+							</section> -->
 
 						<!-- Copyright -->
-							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+							<div class="copyright">&copy; Ethereal. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 					</div>
 
