--- a/index.html
+++ b/index.html
@@ -102,18 +102,18 @@
 							<section class="panel">
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="images/redesigned SO logo.png" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-										<a href="images/17-18.png" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-										<a href="images/thumbnail.png" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
+										<a href="images/redesigned SO logo.png" class="image filtered span-3" data-position="bottom"><img src="images/redesigned SO logo.png" alt="" /></a>
+										<a href="images/17-18.png" class="image filtered span-1-5" data-position="center"><img src="images/17-18.png" alt="" /></a>
+										<a href="images/thumbnail.png" class="image filtered span-1-5" data-position="bottom"><img src="images/thumbnail.png" alt="" /></a>
 									</div>
-									<a href="images/website landing page.PNG" class="image filtered span-1-5" data-position="top"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+									<a href="images/website landing page.PNG" class="image filtered span-1-5" data-position="top"><img src="images/website landing page.PNG" alt="" /></a>
 									<div class="group span-4-5">
-										<a href="images/01.png" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-										<a href="images/Pixel colors both.png" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
+										<a href="images/01.png" class="image filtered span-3" data-position="top"><img src="images/01.png" alt="" /></a>
+										<a href="images/Pixel colors both.png" class="image filtered span-1-5" data-position="center"><img src="images/Pixel colors both.png" alt="" /></a>
 										<a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
-										<a href="images/02.png" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
+										<a href="images/02.png" class="image filtered span-3" data-position="top"><img src="images/02.png" alt="" /></a>
 									</div>
-									<a href="images/final pricing (2).png" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
+									<a href="images/final pricing (2).png" class="image filtered span-2-5" data-position="right"><img src="images/final pricing (2).png" alt="" /></a>
 								</div>
 							</section>
 
