--- a/index.html
+++ b/index.html
@@ -106,16 +106,14 @@
 										<a href="images/17-18.png" class="image filtered span-1-25" data-position="center"><img src="images/17-18.png" alt="" /></a>
 										<a href="images/thumbnail.png" class="image filtered span-1-25" data-position="center"><img src="images/thumbnail.png" alt="" /></a>
 									</div>
-									<div class="span-4">
-									<a href="images/website landing page.PNG" class="image filtered" data-position="top"><img src="images/website landing page.PNG" alt="" /></a>
-									</div>
+									<a href="images/website landing page.PNG" class="image filtered span-4-5" data-position="top"><img src="images/website landing page.PNG" alt="" /></a>
 									<div class="group span-4-5">
 										<a href="images/01.png" class="image filtered span-2-5" data-position="center"><img src="images/01.png" alt="" /></a>
-										<a href="images/Pixel colors both.png" class="image filtered span-1" data-position="center"><img src="images/Pixel colors both.png" alt="" /></a>
-										<a href="images/oh whoops.png" class="image filtered span-1" data-position="center"><img src="images/oh whoops.png" alt="" /></a>
+										<a href="images/Pixel colors both.png" class="image filtered span-1-5" data-position="center"><img src="images/Pixel colors both.png" alt="" /></a>
+										<a href="images/oh whoops.png" class="image filtered span-1-5" data-position="center"><img src="images/oh whoops.png" alt="" /></a>
 										<a href="images/02.png" class="image filtered span-2-5" data-position="center"><img src="images/02.png" alt="" /></a>
 									</div>
-									<a href="images/final pricing (2).PNG" class="image filtered span-2" data-position="top left"><img src="images/final pricing (2).PNG" alt="" /></a>
+									<a href="images/final pricing (2).PNG" class="image filtered span-1-75" data-position="top left"><img src="images/final pricing (2).PNG" alt="" /></a>
 								</div>
 							</section>
 
