--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 										<li><a href="#first" class="button special color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
 								</div>
-								<div class="image tinted filtered span-1-75" data-position="25% 25%">
-									<img src="images/alex-holyoake-113856.jpg" alt="" />
+								<div class="image tinted filtered span-1-75" data-position="60% top">
+									<img src="IMG_4751.JPG" alt="" />
 								</div>
 							</section>
 						
