--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 										<li><a href="#first" class="button special color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
 								</div>
-								<div class="image tinted filtered span-1-75" data-position="60% top">
+								<div class="image tinted filtered span-1-75" data-position="top right">
 									<img src="IMG_4751.JPG" alt="" />
 								</div>
 							</section>
