--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 									</ul>
 								</div>
 								<div class="image tinted filtered span-1-75" data-position="top right">
-									<img src="IMG_4751.JPG" alt="" />
+									<img src="images/IMG_4751.JPG" alt="" />
 								</div>
 							</section>
 						
