--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							</section>
 							
 							<!-- Website Panel (Spotlight) -->
-							<section class="panel spotlight large right" id="first">
+							<section class="panel spotlight medium right" id="first">
 								<div class="image" data-position="top">
 									<img src="images/website landing page.PNG" alt="" />
 								</div>
@@ -130,7 +130,7 @@
 							
 							<!-- Pricing Panel (Spotlight) -->
 								<section class="panel banner right">
-									<div class="image tinted span-1-73" data-position="top">
+									<div class="image tinted span-1-75" data-position="top">
 										<img src="images/final pricing (2).PNG" alt="" />
 									</div>
 								</section>
@@ -152,7 +152,7 @@
 									<img src="images/final.png" alt="" />
 								</div>
 							</section>
-							<section class="panel spotlight large right" id="first">
+							<section class="panel spotlight medium right" id="first">
 								<div class="image" data-position="center">
 									<img src="images/states thumbnail.png" alt="" />
 								</div>
