--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 							<section class="panel spotlight medium left" id="first">
 								<div class="content span-7">
 									<h2 class="major">Introduction</h2>
-									<p>Science Olympiad is one of the largest academic clubs at Mason High School, located in Southwest Ohio. Together, we compete in 23 different events covering a wide variety of scientific topics. 
-										has been established since 2003 and over the years have constantly reached new heights, recently qualifying for the National Tourament to be held at Colorado State University in Fort Collins for the first time in our history. As champions, we also break a 20 year Ohio Science Olympiad record.</p>
+									<p>Science Olympiad is one of the largest academic clubs at Mason High School, located in Southwest Ohio. Together, we compete in 23 different events covering a wide variety of scientific topics. Our team has been established since 2003 and over the years have constantly reached new heights, recently qualifying for the National Tourament to be held at Colorado State University in Fort Collins. </p>
 								</div>
 								<div class="image filtered" data-position="top left">
 									<img src="images/intro bg.png" alt="" />
@@ -55,7 +54,7 @@
 							<section class="panel">
 								<div class="intro color1">
 									<h2 class="major">Our Team</h2>
-									<p>We are a collection of students at MHS with a passion for science beyond the classroom. For hours on end, we seek to break barriers and expectations by working hard and pursuing our interests. In the few short years of high school, the time we've spent together has united us as one family.</p>
+									<p>We are a collection of students at MHS with a passion for science beyond the classroom. In the few short years of high school, the time we've spent together has united us as one family.</p>
 									<p><strong>2018 States</strong></p>
 								</div>
 							</section>
