finally done for tonight

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 								<div class="intro color4">
 									<h2 class="major">The Work</h2>
 									<p>This following is a gallery of all the work I've done this season to cultivate a fun, yet cohesive, team identity to present to others and to encourage team spirit, some of which will last beyond this year after I graduate.</p>
-									<p>Presented in chronological order from September 2017 to May 2018.</p>
+									<p>Presented in chronological order from August 2017 to May 2018, with 4 distinct sections: Pre-Season, Mid-Season, States, and Nationals.</p>
 								</div>
 							</section>
 						
