added the new states pic

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<!-- Our Team Pic Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="image filtered-50% tinted" data-position="top left">
-									<img src="images/ohio state champs.jpg" alt="2018 State Tournament" />
+									<img src="images/states pic.png" alt="2018 State Tournament" />
 								</div>
 							</section>
 
